--- a/index.html
+++ b/index.html
@@ -90,26 +90,26 @@
                         <div class="col-md-7">
                             <div class="row person_details">
                                 <h3>Long Nguyen <span></span></h3>
-                                <h4>Web Designer and Web Developer</h4>
-                                <p>My name is Bernard Shelly. I am 32 years old. Lorem ipsum dolor sit amet, consectetur ascing elits, sed do eiusmod tempor incidunt ut labore et dolore mafgna aliqua. Ut enim ad mini vniam quis nerci, tation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis autes irure dolor in reprehenderit in etrs voluptate velit esse cillum dolore eu fugiat nulla pariatur. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+                                <h4> Web Developer</h4>
+                                <p>My name is Long. I am 19 years old. I am a second year student at Ha Noi University of Industry. I'm interested in node.js </p>
                                 <div class="person_information">
                                     <ul>
                                         <li><a href="#">Age</a></li>
                                         <li><a href="#">Nationality</a></li>
                                         <li><a href="#">Address</a></li>
                                         <li><a href="#">Phone</a></li>
-                                        <li><a href="#">Skype</a></li>
+                                        <li><a href="#">instagram</a></li>
                                         <li><a href="#">Email</a></li>
                                         <li><a href="#">Website</a></li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">24</a></li>
-                                        <li><a href="#">Citizen of United States</a></li>
-                                        <li><a href="#">23 High Hope Blvd, Some City, Some Country</a></li>
-                                        <li><a href="#">+88 01911854378</a></li>
-                                        <li><a href="#">sumon.backpiper</a></li>
-                                        <li><a href="#">backpiper.com@gmail.com</a></li>
-                                        <li><a href="www.topsmmpanel.com">www.topsmmpanel.com</a></li>
+                                        <li><a href="#">19</a></li>
+                                        <li><a href="#">VietNamese</a></li>
+                                        <li><a href="#">Tứ ký ,Hải Dương</a></li>
+                                        <li><a href="#">0353792709</a></li>
+                                        <li><a href="#">instagram.com/longnhiiii/</a></li>
+                                        <li><a href="#">longtkhd2709@gmail.com</a></li>
+                                        <li><a href="htpps://dragonum.me">htpps://dragonum.me</a></li>
                                     </ul>
                                 </div>
                                 <ul class="social_icon">
