--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><img src="" alt=""></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -105,7 +105,7 @@
                                     <ul>
                                         <li><a href="#">19</a></li>
                                         <li><a href="#">VietNamese</a></li>
-                                        <li><a href="#">Tứ ký ,Hải Dương</a></li>
+                                        <li><a href="#">Tứ kỳ-Hải Dương</a></li>
                                         <li><a href="#">0353792709</a></li>
                                         <li><a href="#">instagram.com/longnhiiii/</a></li>
                                         <li><a href="#">longtkhd2709@gmail.com</a></li>
@@ -113,9 +113,9 @@
                                     </ul>
                                 </div>
                                 <ul class="social_icon">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://www.facebook.com/longnguyen2709"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://twitter.com/long87376308"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/longnhiiii/"><i class="fa fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
