--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><i class="fa fahome"></i></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -119,10 +119,7 @@
                                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                                  
                                 </ul>
                             </div>
                         </div>
