--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <li><a href="https://twitter.com/long87376308"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="https://www.instagram.com/longnhiiii/"><i class="fa fa-instagram"></i></a></li>
                                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                    
+
 
                                 </ul>
                             </div>
@@ -132,38 +132,38 @@
                         <div class="col-md-6 wow fadeInUp animated">
                             <div class="skill_text">
                                 <h4>Web development Skills</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loren Ipsum has been the industry's standard dummy text.</p>
+
                             </div>
                             <div class="skill_item_inner">
                                 <div class="single_skill">
-                                    <h4>Wordpress</h4>
+                                    <h4>Node.js</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">85</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">40</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h4>Php & MySQL</h4>
+                                    <h4>Wordpress</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">65</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">25</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
                                     <h4>Html & Css</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">75</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">50</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
                                     <h4>JavaScript</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">95</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">40</span>%</div>
                                         </div>
                                     </div>
                                 </div>
