--- a/index.html
+++ b/index.html
@@ -172,38 +172,38 @@
                         <div class="col-md-6 wow fadeInUp animated">
                             <div class="skill_text">
                                 <h4>Web Design Skills</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Loren Ipsum has been the industry's standard dummy text.</p>
+
                             </div>
                             <div class="skill_item_inner">
                                 <div class="single_skill">
                                     <h4>Creative Design</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">85</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">30</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
                                     <h4>Photoshop</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">65</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">50</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
                                     <h4>Illustrator</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">75</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">0</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h4>Photography</h4>
+                                    <h4></h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">95</span>%</div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter"></span>%</div>
                                         </div>
                                     </div>
                                 </div>
