--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-md-6 wow fadeInUp animated">
                             <div class="skill_text">
-                                <h4>Web Design Skills</h4>
+                              
 
                             </div>
                             <div class="skill_item_inner">
@@ -200,7 +200,7 @@
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h4></h4>
+                                    <h4>PHP</h4>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                             <div class="progress_parcent"><span class="counter"></span>%</div>
