--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
                         </div>
                         <div class="col-md-6 wow fadeInUp animated">
                             <div class="skill_text">
-
+                                <h4>FrameWork and tools</h4>
 
                             </div>
                             <div class="skill_item_inner">
                                 <div class="single_skill">
-                                    <h4>Creative Design</h4>
+                                    <h4>Boostrap</h4>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                                             <div class="progress_parcent"><span class="counter">30</span>%</div>
@@ -184,15 +184,7 @@
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h4>Photoshop</h4>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                            <div class="progress_parcent"><span class="counter">50</span>%</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="single_skill">
-                                    <h4>Illustrator</h4>
+                                    <h4>React(library)</h4>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                             <div class="progress_parcent"><span class="counter">0</span>%</div>
@@ -200,9 +192,17 @@
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h4>PHP</h4>
+                                    <h4>Docker</h4>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress_parcent"><span class="counter">0</span>%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="single_skill">
+                                    <h4>Angular</h4>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                             <div class="progress_parcent"><span class="counter"></span>%</div>
                                         </div>
                                     </div>
