--- a/index.html
+++ b/index.html
@@ -217,34 +217,34 @@
                     </div>
                     <div class="education_inner_area">
                         <div class="education_item wow fadeInUp animated" data-line="S">
-                            <h6>2005-2007</h6>
-                            <a href="#"><h4>Secondary School</h4></a>
-                            <h5>St. Nicholas High School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                            <h6>2006-2011</h6>
+                            <a href="#"><h4>Primary School</h4></a>
+                            <h5>An Thanh Prymary School</h5>
+
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="H">
-                            <h6>2005-2007</h6>
+                            <h6>2011-2014</h6>
                             <a href="#"><h4>Secondary School</h4></a>
-                            <h5>St. Nicholas High School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                            <h5>An Thanh Secondary School</h5>
+
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="C">
-                            <h6>2005-2007</h6>
-                            <a href="#"><h4>Secondary School</h4></a>
-                            <h5>St. Nicholas High School</h5>
+                            <h6>2015-2018</h6>
+                            <a href="#"><h4>Hight School</h4></a>
+                            <h5>Cau Xe High School</h5>
                             <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="M">
-                            <h6>2005-2007</h6>
-                            <a href="#"><h4>Secondary School</h4></a>
-                            <h5>St. Nicholas High School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                            <h6>2018-2019</h6>
+                            <a href="#"><h4> University</h4></a>
+                            <h5>Ha Noi University of Industry</h5>
+
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="W">
-                            <h6>2005-2007</h6>
-                            <a href="#"><h4>Secondary School</h4></a>
-                            <h5>St. Nicholas High School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                            <h6>2019-> moment</h6>
+                            <a href="#"><h4></h4></a>
+                            <h5>Ha Noi University of Industry</h5>
+
                         </div>
                     </div>
                 </section>
