--- a/index.html
+++ b/index.html
@@ -216,31 +216,31 @@
                         <h2>Education</h2>
                     </div>
                     <div class="education_inner_area">
-                        <div class="education_item wow fadeInUp animated" data-line="L">
+                        <div class="education_item wow fadeInUp animated" data-line="1">
                             <h6>2006-2011</h6>
                             <a href="#"><h4>Primary School</h4></a>
                             <h5>An Thanh Prymary School</h5>
 
                         </div>
-                        <div class="education_item wow fadeInUp animated" data-line="">
+                        <div class="education_item wow fadeInUp animated" data-line="2">
                             <h6>2011-2014</h6>
                             <a href="#"><h4>Secondary School</h4></a>
                             <h5>An Thanh Secondary School</h5>
 
                         </div>
-                        <div class="education_item wow fadeInUp animated" data-line="O">
+                        <div class="education_item wow fadeInUp animated" data-line="3">
                             <h6>2015-2018</h6>
                             <a href="#"><h4>Hight School</h4></a>
                             <h5>Cau Xe High School</h5>
-                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                          
                         </div>
-                        <div class="education_item wow fadeInUp animated" data-line="N">
+                        <div class="education_item wow fadeInUp animated" data-line="4">
                             <h6>2018-2019</h6>
                             <a href="#"><h4> University</h4></a>
                             <h5>Ha Noi University of Industry</h5>
 
                         </div>
-                        <div class="education_item wow fadeInUp animated" data-line="G">
+                        <div class="education_item wow fadeInUp animated" data-line="5">
                             <h6>2019-> moment</h6>
                             <a href="#"><h4></h4></a>
                             <h5>Ha Noi University of Industry</h5>
