--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                             <h6>2006-2011</h6>
                             <a href="#"><h4>Primary School</h4></a>
                             <h5>An Thanh Prymary School</h5>
+                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
 
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="2">
@@ -232,7 +233,7 @@
                             <h6>2015-2018</h6>
                             <a href="#"><h4>Hight School</h4></a>
                             <h5>Cau Xe High School</h5>
-                          
+                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="4">
                             <h6>2018-2019</h6>
