--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                             <h6>2011-2014</h6>
                             <a href="#"><h4>Secondary School</h4></a>
                             <h5>An Thanh Secondary School</h5>
+                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
 
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="3">
