--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
                             <h6>2006-2011</h6>
                             <a href="#"><h4>Primary School</h4></a>
                             <h5>An Thanh Prymary School</h5>
+                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+
 
                         </div>
                         <div class="education_item wow fadeInUp animated" data-line="2">
