--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
                             <h6>2019-> moment</h6>
                             <a href="#"><h4></h4></a>
                             <h5>Ha Noi University of Industry</h5>
+                            <p>Lorem ipsum dolor sit amets, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+
 
                         </div>
                     </div>
