--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="row">
                         <div class="col-md-5">
                             <div class="person_img">
-                                <img src="img/member/member-1.png" alt="">
+                                <img src="img/myimg.jpg" alt="">
                                 <a class="download_btn" href="#"><span>Download Resume</span></a>
                             </div>
                         </div>
