--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <div class="row">
                         <div class="col-md-5">
                             <div class="person_img">
-                                <img src="img/myimg.jpg" alt="">
-                                <a class="download_btn" href="#"><span>Download Resume</span></a>
+                                <img src="./img/myimg.jpg" alt="">
+                                <a class="download_btn" href="#"><span>Long Nguyễn</span></a>
                             </div>
                         </div>
                         <div class="col-md-7">
@@ -107,9 +107,9 @@
                                         <li><a href="#">VietNamese</a></li>
                                         <li><a href="#">Tứ kỳ-Hải Dương</a></li>
                                         <li><a href="#">0353792709</a></li>
-                                        <li><a href="#">instagram.com/longnhiiii/</a></li>
+                                        <li><a href="#">Long Nhi</a></li>
                                         <li><a href="#">longtkhd2709@gmail.com</a></li>
-                                        <li><a href="htpps://dragonum.me">htpps://dragonum.me</a></li>
+                                        <li><a href="htpps://dragonum.me">longtkhd/longtkhd.github.io </a></li>
                                     </ul>
                                 </div>
                                 <ul class="social_icon">
