sua color ti thoi :)

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <hr>
     <h1>
         <i><span style="color:black">BLACK</span>PINK </i>
-        <b>IN YOUR AREA</b>
+        <b>IS THE REVOLUTION</b>
     </h1>
     <hr>
     <div class="char">
         <img src="./imgs/1e30401a6797004a45ff18a56b4c1b6e.jpg" alt="Kim Jennie" height="500" width="500">
-        <h1> Jennie tên thật là Jennie Kim (제니 김)</h1>
+        <h1> Jennie tên thật là <span style="color:black">Jennie Kim (제니 김)</span></h1>
         <p> <i><b>
                     Cô còn được biết đến với nhiều biệt danh như Mandoo hay Jendeukie<br>
                     Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
@@ -34,7 +34,7 @@
     <hr>
     <div class="char">
         <img src="./imgs/b.jpg" alt="Kim Jennie" height="500" width="500">
-        <h1> Jisoo tên thật là Kim Ji Soo (김지수) </h1>
+        <h1> Jisoo tên thật là<span style="color:black"> Kim Ji Soo (김지수) </span></h1>
         <p> <i><b>
                     Cô ấy sinh ra ở Seoul, Hàn Quốc,Jisoo đúng chuẩn 1 thần tượng 4D<br>
                     Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
@@ -48,7 +48,7 @@
 
     <div class="char">
         <img src="./imgs/rose.jpg" alt="Rose" height="500" width="500">
-        <h1> Rose tên thật là Park Chae Young  </h1>
+        <h1> Rose tên thật là<span style="color:black"> Park Chae Young </span> </h1>
         <p> <i><b>
                    Cô ấy là người Hàn Quốc, nhưng cô ấy được sinh ra ở Auckland, New Zealand<br> và lớn lên ở Melbourne, Box
                    Hill (Australia),<br> nơi cô theo học Canterbury Girls Secondary College
@@ -62,7 +62,7 @@
     <hr>
     <div class="char">
         <img src="./imgs/aaa.jpg" alt="Lisa" height="500" width="500">
-        <h1> Lisa tên thật là Lalisa Manoban </h1>
+        <h1> Lisa tên thật là <span style="color:black">Lalisa Manoban </span></h1>
         <p> <i><b>
                    Lisa sinh ra ở Bangkok, Thái Lan<br>
                    Trước đây, tên của cô là Pranpriya và bạn bè cô gọi cô bằng biệt hiệu Pockpack.<br>
@@ -80,7 +80,7 @@
 
      <div class="char">
          <img src="./imgs/intro2.jpg" alt="Lisa" height="1002" width="564">
-         <h1> Lisa tên thật là Lalisa Manoban </h1>
+         <h1><span style="color:black"> BlackPink in your area</span> </h1>
          <p> <i><b>
                     Được mệnh danh là “tân binh quái vật”,<br> Black Pink nhanh chóng trở thành một trong những nhóm nhạc nữ
                     hàng đầu làng giải trí Hàn.<br> Mặc dù mới ra mắt gần đây nhưng Black Pink thu hút được rất nhiều fan
