--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div style="width: 100%; height: 100%;"class=" header">
-        <img src="./imgs/aa.jpeg"alt="a" height="100%" width="100%">
+    <div style="width: 100%; height: 100%;" class=" header">
+        <img src="./imgs/aa.jpeg" alt="a" height="100%" width="100%">
     </div>
     <hr>
     <h1>
@@ -50,11 +50,12 @@
         <img src="./imgs/rose.jpg" alt="Rose" height="500" width="500">
         <h1> Rose tên thật là<span style="color:black"> Park Chae Young </span> </h1>
         <p> <i><b>
-                   Cô ấy là người Hàn Quốc, nhưng cô ấy được sinh ra ở Auckland, New Zealand<br> và lớn lên ở Melbourne, Box
-                   Hill (Australia),<br> nơi cô theo học Canterbury Girls Secondary College
-                Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
-                Vị trí: Main vocal,Lead dancer<br>
-                Nghệ danh: <span style="color:palevioletred">ROSÉ</span>
+                    Cô ấy là người Hàn Quốc, nhưng cô ấy được sinh ra ở Auckland, New Zealand<br> và lớn lên ở
+                    Melbourne, Box
+                    Hill (Australia),<br> nơi cô theo học Canterbury Girls Secondary College
+                    Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
+                    Vị trí: Main vocal,Lead dancer<br>
+                    Nghệ danh: <span style="color:palevioletred">ROSÉ</span>
                 </b></i></p>
     </div>
 
@@ -64,33 +65,37 @@
         <img src="./imgs/aaa.jpg" alt="Lisa" height="500" width="500">
         <h1> Lisa tên thật là <span style="color:black">Lalisa Manoban </span></h1>
         <p> <i><b>
-                   Lisa sinh ra ở Bangkok, Thái Lan<br>
-                   Trước đây, tên của cô là Pranpriya và bạn bè cô gọi cô bằng biệt hiệu Pockpack.<br>
+                    Lisa sinh ra ở Bangkok, Thái Lan<br>
+                    Trước đây, tên của cô là Pranpriya và bạn bè cô gọi cô bằng biệt hiệu Pockpack.<br>
                     Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
                     Vị trí: Main dancer,lead rapper<br>
                     Nghệ danh: <span style="color:palevioletred">Lisa</span>
                 </b></i></p>
     </div>
-     <hr>
-     <h1>
-         <b>BlackPink</b>
-     </h1>
-     <hr>
+    <hr>
+    <h1>
+        <b>BlackPink</b>
+    </h1>
+    <hr>
 
 
-     <div class="char">
-         <img src="./imgs/intro2.jpg" alt="Lisa" height="1002" width="564">
-         <h1><span style="color:black"> BlackPink in your area</span> </h1>
-         <p> <i><b>
-                    Được mệnh danh là “tân binh quái vật”,<br> Black Pink nhanh chóng trở thành một trong những nhóm nhạc nữ
-                    hàng đầu làng giải trí Hàn.<br> Mặc dù mới ra mắt gần đây nhưng Black Pink thu hút được rất nhiều fan
-                    bởi cả ngoại hình lẫn thực lực vượt trội<br> do vậy nên người hâm mộ của 4 cô gái này không thể không
+    <div class="char">
+        <img src="./imgs/intro2.jpg" alt="Lisa" height="1002" width="564">
+        <h1><span style="color:black"> BlackPink in your area</span> </h1>
+        <p> <i><b>
+                    Được mệnh danh là “tân binh quái vật”,<br> Black Pink nhanh chóng trở thành một trong những nhóm
+                    nhạc nữ
+                    hàng đầu làng giải trí Hàn.<br> Mặc dù mới ra mắt gần đây nhưng Black Pink thu hút được rất nhiều
+                    fan
+                    bởi cả ngoại hình lẫn thực lực vượt trội<br> do vậy nên người hâm mộ của 4 cô gái này không thể
+                    không
                     nóng lòng để được tìm hiểu <br>nhiều thêm về tất cả những gì liên quan đến idol của họ
-                 </b></i></p>
-     </div>
-     <div class="footer">
-        <p>Designed with all the <span style="color:palevioletred">love</span> in the world by <a href="#">Longnhi</a></p>
-     </div>
+                </b></i></p>
+    </div>
+    <div class="footer">
+        <p style="margin:0">Designed with all the <span style="color:palevioletred">love</span> in the world by <a href="#">Longnhi</a>
+        </p>
+    </div>
 
 
 </body>
