--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
     <hr>
     <h1>
         <i><span style="color:black">BLACK</span>PINK </i>
-        <b>IS THE REVOLUTION</b>
+        <b style=" background-image:linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);">IS THE
+            REVOLUTION</b>
     </h1>
     <hr>
     <div class="char">
         <img src="./imgs/1e30401a6797004a45ff18a56b4c1b6e.jpg" alt="Kim Jennie" height="500" width="500">
-        <h1> Jennie tên thật là <span style="color:black">Jennie Kim (제니 김)</span></h1>
+        <h1> Jennie</span> tên thật
+            là <span
+        style="color:black">Jennie
+                Kim (제니 김)</span></h1>
         <p> <i><b>
                     Cô còn được biết đến với nhiều biệt danh như Mandoo hay Jendeukie<br>
                     Là một thành viên cuả nhóm nhạc <span style="color:palevioletred"> BlackPink</span><br>
