--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>BlackPink Buổi 1</title>
 </head>
 
 <body>
@@ -23,8 +23,7 @@
     <div class="char">
         <img src="./imgs/1e30401a6797004a45ff18a56b4c1b6e.jpg" alt="Kim Jennie" height="500" width="500">
         <h1> Jennie</span> tên thật
-            là <span
-        style="color:black">Jennie
+            là <span style="color:black">Jennie
                 Kim (제니 김)</span></h1>
         <p> <i><b>
                     Cô còn được biết đến với nhiều biệt danh như Mandoo hay Jendeukie<br>
@@ -97,7 +96,8 @@
                 </b></i></p>
     </div>
     <div class="footer">
-        <p style="margin:0">Designed with all the <span style="color:palevioletred">love</span> in the world by <a href="#">Longnhi</a>
+        <p style="margin:0">Designed with all the <span style="color:palevioletred">love</span> in the world by <a
+                href="#">Longnhi</a>
         </p>
     </div>
 
