--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <div style="width: 100%; height: 100%;" class=" header">
+    <div  class=" header">
         <img src="./imgs/aa.jpeg" alt="a" height="100%" width="100%">
     </div>
     <hr>
     <h1>
-        <i><span style="color:black">BLACK</span>PINK </i>
-        <b style=" background-image:linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);">IS THE
+        <i style=" background-image:linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b)"><span
+                style="color:black">BLACK</span>PINK </i>
+        <b >IS THE
             REVOLUTION</b>
     </h1>
     <hr>
