--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <li><a href="#"><i class="fa fa-home" ></i> Home</a>
                 <ul class="sub-menu">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#">Home1</a>
                         <ul class="sub-menu">
-                            <li><a href="#">Home.1</a>
+                            <li><a href="#">Home1.1</a>
                                 <ul class="sub-menu">
                                     <li><a href="#">Home1.1</a></li>
                                     <li><a href="#">Home1.2</a></li>
@@ -24,7 +24,7 @@
                                     <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home.2</a>
+                            <li><a href="#">Home1.2</a>
                                 <ul class="sub-menu">
                                     <li><a href="#">Home1.1</a></li>
                                     <li><a href="#">Home1.2</a></li>
@@ -32,7 +32,7 @@
                                     <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home.3</a>
+                            <li><a href="#">Home1.3</a>
                                 <ul class="sub-menu">
                                     <li><a href="#">Home1.1</a></li>
                                     <li><a href="#">Home1.2</a></li>
@@ -40,7 +40,7 @@
                                     <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home.4</a>
+                            <li><a href="#">Home1.4</a>
                                 <ul class="sub-menu">
                                     <li><a href="#">Home1.1</a></li>
                                     <li><a href="#">Home1.2</a></li>
@@ -50,6 +50,7 @@
                             </li>
                         </ul>
                     </li>
+
                     <li><a href="#">Home2</a>
                         <ul class="sub-menu">
                             <li><a href="#">Home2.1</a>
@@ -62,10 +63,10 @@
                             </li>
                             <li><a href="#">Home2.2</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home.1</a></li>
-                                    <li><a href="#">Home.2</a></li>
-                                    <li><a href="#">Home.3</a></li>
-                                    <li><a href="#">Home.4</a></li>
+                                    <li><a href="#">Home2.1</a></li>
+                                    <li><a href="#">Home2.2</a></li>
+                                    <li><a href="#">Home2.3</a></li>
+                                    <li><a href="#">Home2.4</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Home2.3</a>
@@ -86,42 +87,47 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a href="#">Home3</a>
+
+                    <li>
+                        <a href="#">Home3</a>
                         <ul class="sub-menu">
-                            <li><a href="#">Home3.1</a>
+                            <li><a href="#">Home1.1</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home.1</a></li>
-                                    <li><a href="#">Home.2</a></li>
-                                    <li><a href="#">Home.3</a></li>
-                                    <li><a href="#">Home.4</a></li>
+                                    <li><a href="#">Home1.1</a></li>
+                                    <li><a href="#">Home1.2</a></li>
+                                    <li><a href="#">Home1.3</a></li>
+                                    <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home3.2</a>
+                            <li><a href="#">Home1.2</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home.1</a></li>
-                                    <li><a href="#">Home.2</a></li>
-                                    <li><a href="#">Home.3</a></li>
-                                    <li><a href="#">Home.4</a></li>
+                                    <li><a href="#">Home1.1</a></li>
+                                    <li><a href="#">Home1.2</a></li>
+                                    <li><a href="#">Home1.3</a></li>
+                                    <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home3.3</a>
+                            <li><a href="#">Home1.3</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home.1</a></li>
-                                    <li><a href="#">Home.2</a></li>
-                                    <li><a href="#">Home.3</a></li>
-                                    <li><a href="#">Home.4</a></li>
+                                    <li><a href="#">Home1.1</a></li>
+                                    <li><a href="#">Home1.2</a></li>
+                                    <li><a href="#">Home1.3</a></li>
+                                    <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Home3.4</a>
+                            <li><a href="#">Home1.4</a>
                                 <ul class="sub-menu">
-                                    <li><a href="#">Home.1</a></li>
-                                    <li><a href="#">Home.2</a></li>
-                                    <li><a href="#">Home.3</a></li>
-                                    <li><a href="#">Home.4</a></li>
+                                    <li><a href="#">Home1.1</a></li>
+                                    <li><a href="#">Home1.2</a></li>
+                                    <li><a href="#">Home1.3</a></li>
+                                    <li><a href="#">Home1.4</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
+
+
+
                     <li><a href="#">Home4</a>
                         <ul class="sub-menu">
                             <li><a href="#">Home4.1</a>
@@ -161,6 +167,14 @@
 
                 </ul>
             </li>
+
+
+
+
+
+
+
+
             <li><a href="#">About</a>
                 <ul class="sub-menu">
                     <li><a href="#">About1</a>
