--- a/index.html
+++ b/index.html
@@ -762,6 +762,9 @@
             </li>
         </ul>
 
+        <input class="search" type="text" placeholder="Search.." height="50" width="50">
+
+
     </div>
 
 </body>
