--- a/buoi5/index.html
+++ b/buoi5/index.html
@@ -12,13 +12,17 @@
     <div class="menu">
         <ul class="main-menu">
             <li><a href="#"><i class="fa fa-home" ></i> Home</a>
+                <!-- Cấp 1 -->
                 <ul class="sub-menu">
                     <li>
                         <a href="#">Home1</a>
+                        <!-- cấp 2 -->
                         <ul class="sub-menu">
                             <li><a href="#">Home1.1</a>
+                                <!-- cấp 3 -->
                                 <ul class="sub-menu">
                                     <li><a href="#">Home1.1</a></li>
+                                    <!-- cấp 4 -->
                                     <li><a href="#">Home1.2</a></li>
                                     <li><a href="#">Home1.3</a></li>
                                     <li><a href="#">Home1.4</a></li>
@@ -50,7 +54,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li><a href="#">Home2</a>
                         <ul class="sub-menu">
                             <li><a href="#">Home2.1</a>
@@ -125,9 +128,6 @@
                             </li>
                         </ul>
                     </li>
-
-
-
                     <li><a href="#">Home4</a>
                         <ul class="sub-menu">
                             <li><a href="#">Home4.1</a>
