--- a/BTVN5/index.html
+++ b/BTVN5/index.html
@@ -65,7 +65,7 @@
                     <p>Some text about me</p>
                 </div>
                 <div class="midright bgr">
-                    <h2> Populer Post</h2>
+                    <h2> Popular Post</h2>
 
                     <div class="image2">
                         <p>image</p>
