--- a/BTL2/index.html
+++ b/BTL2/index.html
@@ -109,10 +109,10 @@
 
                 <form class="form w-100 d-xl-none row">
                     <div class="input-group navbar-search w-100 justify-content-center col-11">
-                        <input style="width: 90%;" type="text  " class=" input-search  " placeholder="Tìm kiếm sản phẩm">
-                        <div class="input-group-btn pi col-1 w-100 ">
-                            <button class="btn btn-default " type="submit">
-                                     <i class="fas fa-search fa-1x text-white"></i>
+                        <input style="width: 90%;" type="text  " class=" input-search   " placeholder="Tìm kiếm sản phẩm">
+                        <div class="input-group-btn pi col-1 input-group ">
+                            <button class="btn btn-default btn-group" type="submit">
+                                    <i class="fas fa-search fa-1x text-white"></i>
                             </button>
                         </div>
 
@@ -137,8 +137,8 @@
 
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto ">
-                        <li class="nav-item pa1">
-                            <a class="nav-link " href="#">Trang chủ <span class="sr-only">(current)</span></a>
+                        <li class="nav-item pa1 menuhover">
+                            <a class="nav-link " href="# ">Trang chủ <span class="sr-only ">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown pa1 MEGA menuhover">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -221,12 +221,25 @@
                                     <div class="col-3 pl-3 megaMenu">
                                         <p class="pl-3 ">LAPTOP THEO CẤU HÌNH</p>
                                         <ul class="pl-3 ">
-                                            <li>Laptop thế hệ mới</li>
-                                            <li>Laptop Intel Core i7</li>
-                                            <li>Laptop Intel Core i5</li>
-                                            <li>Laptop sử dụng SSD</li>
-                                            <li>Laptop card rời</li>
-                                            <li>Laptop card on</li>
+                                            <li>
+                                                <a href="#">Laptop thế hệ mới</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Laptop Intel Core i7</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Laptop Intel Core i5</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Laptop sử dụng SSD</a>
+                                            </li>
+                                            <li>
+
+                                                <a href="#">Laptop card rời</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Laptop card on</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -240,12 +253,24 @@
                             <div class="dropdown-menu  megaMenu h2sub " aria-labelledby="navbarDropdown ">
 
                                 <ul class="w-100">
-                                    <li>Laptop thế hệ mới</li>
-                                    <li>Laptop Intel Core i7</li>
-                                    <li>Laptop Intel Core i5</li>
-                                    <li>Laptop sử dụng SSD</li>
-                                    <li>Laptop card rời</li>
-                                    <li>Laptop card on</li>
+                                    <li>
+                                        <a href="#">Laptop thế hệ mới</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Intel Core i7</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Intel Core i5</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Laptop sử dụng SSD</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop card rời</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop card on</a>
+                                    </li>
                                 </ul>
 
                             </div>
@@ -260,14 +285,22 @@
                             <div class="dropdown-menu  megaMenu h2sub " aria-labelledby="navbarDropdown ">
 
                                 <ul class="pl-3 ">
-                                    <li>Laptop Dell Inspirion</li>
-                                    <li>Laptop Dell Latitude</li>
-                                    <li>Laptop Dell Pricision</li>
-                                    <li>Laptop Dell Vostro</li>
-                                    <li>Laptop Dell XPS</li>
-
+                                    <li>
+                                        <a href="#">Laptop Dell Inspirion</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Dell Latitude</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Dell Pricision</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Dell Vostro</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Dell XPS</a>
+                                    </li>
                                 </ul>
-
                             </div>
                         </li>
                         <!-- laptop HP -->
@@ -278,39 +311,59 @@
                             <div class="dropdown-menu  megaMenu h2sub " aria-labelledby="navbarDropdown ">
 
                                 <ul class=" w-100">
-                                    <li>Laptop Hp Elitebook</li>
-                                    <li>Laptop Hp Folio</li>
-                                    <li>Laptop Dell Probook</li>
-                                    <li>Laptop Hp Workstation / Z Book</li>
-
-
+                                    <li>
+                                        <a href="#">Laptop Hp Elitebook</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Hp Folio</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Dell Probook</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Laptop Hp Workstation / Z Book</a>
+                                    </li>
                                 </ul>
-
                             </div>
                         </li>
                         <!-- lenovo thinkpad -->
                         <li class="nav-item pa1 menuhover">
                             <a class="nav-link " href="# ">Laptop Lenovo Thinkpad <span
-                                      class="sr-only ">(current)</span></a>
+                                    class="sr-only ">(current)</span></a>
                         </li>
                         <!-- linh kiện -->
                         <li class="nav-item dropdown pa1 menuhover">
                             <a class="nav-link dropdown-toggle " href="# " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                  Linh kiện
-                              </a>
+                                Linh kiện
+                            </a>
                             <div class="dropdown-menu  megaMenu h2sub " aria-labelledby="navbarDropdown ">
 
                                 <ul class="w-100">
-                                    <li>Màn hình</li>
-                                    <li>Bàn phím</li>
-                                    <li>Ổ cứng</li>
-                                    <li>RAM</li>
-                                    <li>Pin laptop</li>
-                                    <li>Sạc laptop</li>
-                                    <li>CPU</li>
-                                    <li>Phụ Kiện Laptop</li>
+                                    <li>
+                                        <a href="#">Màn hình</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Bàn phím</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Ổ cứng</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">RAM</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pin laptop</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Sạc laptop</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">CPU</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Phụ Kiện Laptop</a>
+                                    </li>
                                 </ul>
-
                             </div>
                         </li>
                         <li class="nav-item pa1 menuhover">
