add demo router

--- a/BTL2/index.html
+++ b/BTL2/index.html
@@ -150,7 +150,7 @@
                                         <p class="pl-3 ">LAPTOP THEO HÃNG SẢN XUẤT</p>
                                         <ul class="pl-3 ">
                                             <li>
-                                                <a href="#">Laptop Dell</a>
+                                                <a href="./Dell/index.html">Laptop Dell</a>
 
                                             </li>
                                             <li>
@@ -279,26 +279,26 @@
                             <a class="nav-link " href="# ">Laptop đồ họa</a>
                         </li>
                         <li class="nav-item dropdown pa1 menuhover ">
-                            <a class="nav-link dropdown-toggle " href="# " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
+                            <a class="nav-link dropdown-toggle " href="./Dell/index.html " id="navbarDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
                                   Laptop Dell
                               </a>
                             <div class="dropdown-menu  megaMenu h2sub " aria-labelledby="navbarDropdown ">
 
                                 <ul class="pl-3 ">
                                     <li>
-                                        <a href="#">Laptop Dell Inspirion</a>
+                                        <a href="#"> Dell Inspirion</a>
                                     </li>
                                     <li>
-                                        <a href="#">Laptop Dell Latitude</a>
+                                        <a href="#"> Dell Latitude</a>
                                     </li>
                                     <li>
-                                        <a href="#">Laptop Dell Pricision</a>
+                                        <a href="#"> Dell Pricision</a>
                                     </li>
                                     <li>
-                                        <a href="#">Laptop Dell Vostro</a>
+                                        <a href="#"> Dell Vostro</a>
                                     </li>
                                     <li>
-                                        <a href="#">Laptop Dell XPS</a>
+                                        <a href="#"> Dell XPS</a>
                                     </li>
                                 </ul>
                             </div>
@@ -456,8 +456,8 @@
                         TOP 25 MẪU MÁY TRẠM HOT NHẤT 2019
                     </h2>
                     <span class="price ">
-                          <ins>
-                              <span class="text-dark ">Liên Hệ</span>
+                        <ins>
+                            <span class="text-dark ">Liên Hệ</span>
                     </ins>
 
                     </span>
